--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
-    "tailwindcss": "^4.1.5",
-    "tw-animate-css": "^1.2.9"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
