--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.507.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
