--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "resend": "^4.6.0",
     "sonner": "^2.0.3",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.2.0",
